<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search_button"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download_playlist"
        android:icon="@drawable/ic_file_download"
        android:title="@string/menu_download_all_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_queue"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_to_queue_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pin_playlist"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_pin_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unpin_playlist"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_unpin_button"
        app:showAsAction="never" />
</menu>