<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:clipChildren="false">

        <!-- Header -->
        <ImageView
            android:id="@+id/podcast_cover_image_view"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/podcast_title_text_view"
            style="@style/LabelMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:text="@string/label_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/podcast_cover_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/podcast_cover_image_view"
            app:layout_constraintTop_toTopOf="@+id/podcast_cover_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/option_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/play_next_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_play_next"
            android:visibility="gone" />

        <TextView
            android:id="@+id/add_to_queue_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_add_to_queue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/download_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_download"
            android:visibility="gone" />

        <TextView
            android:id="@+id/remove_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_remove"
            android:visibility="gone" />

        <TextView
            android:id="@+id/delete_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_delete" />

        <TextView
            android:id="@+id/go_to_channel_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:visibility="gone"
            android:paddingBottom="12dp"
            android:text="@string/podcast_bottom_sheet_go_to_channel" />

    </LinearLayout>
</LinearLayout>