<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_radio_station_sector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/global_padding_bottom">

            <TextView
                android:id="@+id/internet_radio_station_pre_text_view"
                style="@style/TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/home_subtitle_new_internet_radio_station"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/internet_radio_station_title_text_view"
                style="@style/TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/home_title_internet_radio_station" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/internet_radio_station_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/empty_radio_station_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/global_padding_bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_description_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="240dp"
            android:maxHeight="240dp"
            android:scaleType="centerInside"
            android:src="@drawable/ui_empty_radio_station" />

        <TextView
            android:id="@+id/title_empty_description_label"
            style="@style/LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/radio_station_info_empty_title" />

        <TextView
            android:id="@+id/subtitle_empty_description_label"
            style="@style/LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="56dp"
            android:paddingEnd="56dp"
            android:text="@string/radio_station_info_empty_subtitle" />

        <View
            style="@style/Divider"
            android:layout_width="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/hide_section_button"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/radio_station_info_empty_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



