<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp">

        <!-- Header -->
        <ImageView
            android:id="@+id/group_cover_image_view"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group_title_text_view"
            style="@style/LabelMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/label_placeholder"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/group_subtitle_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/group_cover_image_view"
            app:layout_constraintTop_toTopOf="@+id/group_cover_image_view" />

        <TextView
            android:id="@+id/group_subtitle_text_view"
            style="@style/LabelSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/label_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/group_cover_image_view"
            app:layout_constraintTop_toBottomOf="@+id/group_title_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/group_cover_image_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/option_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/play_random_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/downloaded_bottom_sheet_shuffle" />

        <TextView
            android:id="@+id/play_next_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/downloaded_bottom_sheet_play_next" />

        <TextView
            android:id="@+id/add_to_queue_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/downloaded_bottom_sheet_add_to_queue" />

        <TextView
            android:id="@+id/remove_all_text_view"
            style="@style/LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/downloaded_bottom_sheet_remove_all" />
    </LinearLayout>

</LinearLayout>