<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="?android:textColorHint"
        app:endIconMode="clear_text"
        app:endIconTint="?android:textColorSecondary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/internet_radio_station_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio_editor_dialog_hint_name"
            android:inputType="textNoSuggestions"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="?android:textColorHint"
        app:endIconMode="clear_text"
        app:endIconTint="?android:textColorSecondary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/internet_radio_station_stream_url_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio_editor_dialog_hint_stream_url"
            android:inputType="textNoSuggestions"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="?android:textColorHint"
        app:endIconMode="clear_text"
        app:endIconTint="?android:textColorSecondary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/internet_radio_station_homepage_url_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio_editor_dialog_hint_homepage_url"
            android:inputType="textNoSuggestions"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>