<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/global_padding_bottom">

        <LinearLayout
            android:id="@+id/home_podcast_channels_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <!--  Label and button  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/home_title_podcast_channels" />

                <TextView
                    android:id="@+id/podcast_channels_text_view_clickable"
                    style="@style/TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:text="@string/home_title_podcast_channels_see_all_button" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/podcast_channels_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />
        </LinearLayout>

        <View
            android:id="@+id/upper_button_divider"
            style="@style/Divider"
            android:layout_marginHorizontal="16dp" />

        <LinearLayout
            android:id="@+id/home_newest_podcasts_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/home_title_newest_podcasts" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newest_podcasts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingTop="8dp" />
        </LinearLayout>

        <include
            android:id="@+id/podcast_episodes_placeholder"
            layout="@layout/item_placeholder_horizontal"
            android:visibility="gone" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>